# libback

./: CMakeLists.txt  Makefile  README.md  abrt.cc  back.c  segv.cc
